--- a/MealHelperUI/Components/Pages/Favorites.razor
+++ b/MealHelperUI/Components/Pages/Favorites.razor
@@ -20,7 +20,8 @@ else
     <div id="container">
         @foreach (var favMeal in favoriteMeals)
         {
-            <MealCard mealName=@favMeal.name mealImage=@favMeal.image mealId="@favMeal.mealId" />
+            <MealCard mealName=@favMeal.name mealImage=@favMeal.image mealId="@favMeal.mealId"
+                      ingredients="@favMeal.ingredients" measurements="@favMeal.measurements" />
         }
     </div>
 }
@@ -30,18 +31,24 @@ else
     private List<MealModel> dbMeals = new List<MealModel>();
     private bool getDataError;
     private List<Meal> favoriteMeals = new List<Meal>();
+    private List<string> tempIngredients = new List<string>();
+    private List<string> tempMeasurements = new List<string>();
 
     public class Meal
     {
         public string name { get; set; }
         public string image { get; set; }
         public string mealId { get; set; }
+        public List<string> ingredients { get; set; } = new List<string>();
+        public List<string> measurements { get; set; } = new List<string>();
 
-        public Meal(string name, string image, string mealId)
+        public Meal(string name, string image, string mealId, List<string> ingredients, List<string> measurements)
         {
             this.name = name;
             this.image = image;
             this.mealId = mealId;
+            this.ingredients = ingredients;
+            this.measurements = measurements;
         }
     }
 
@@ -76,8 +83,22 @@ else
 
                         foreach (var data in parsedData["meals"])
                         {
-                            favoriteMeals.Add(new Meal((string)data["strMeal"], (string)data["strMealThumb"],
-                            (string)data["idMeal"]));
+                            for (int i = 1; i <= 20; i++)
+                            {
+                                tempIngredients.Add((string)data["strIngredient" + i]);
+                                tempMeasurements.Add((string)data["strMeasure" + i]);
+                            }
+
+                            tempIngredients = tempIngredients.Where(s => !string.IsNullOrWhiteSpace(s)).ToList();
+                            tempMeasurements = tempMeasurements.Where(s => !string.IsNullOrWhiteSpace(s)).ToList();
+
+                            favoriteMeals.Add(new Meal(
+                                (string)data["strMeal"],
+                                (string)data["strMealThumb"],
+                                (string)data["idMeal"],
+                                tempIngredients,
+                                tempMeasurements
+                            ));
                         }
                     }
                     else
